# sears-home-task

./: .gitignore  Dockerfile  QUICKSTART.md  README.md  TECHNICAL_DESIGN.md  docker-compose.dev.yml  docker-compose.yml  env.example.txt  pyproject.toml  requirements.txt
app/: __init__.py  config.py  database.py  main.py  seed_data.py
app/api/: __init__.py  routes.py  upload.py  voice.py
app/models/: __init__.py  availability.py  base.py  customer.py  technician.py
app/schemas/: __init__.py  appointment.py  conversation.py  customer.py  technician.py
app/services/: __init__.py  customer_service.py  diagnostic_service.py  email_service.py  image_service.py  scheduling_service.py  technician_service.py
app/voice/: __init__.py  agent.py  realtime_handler.py  session_manager.py
scripts/: __init__.py  setup_twilio.py  test_call.py
tests/: __init__.py  conftest.py  test_api.py  test_services.py
